# telugu-agentic-rag

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  README.md  app.py  app_generation.py  app_ingestion.py  debug_output.txt  list_gemini_models.py  pyproject.toml  pyproject.toml.bak  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agentic_implementation plan/: README.md
agentic_implementation plan/agents/: ingestion_vectorization_agent.md  keyword_intelligence_agent.md  metadata_generation_agent.md  prompt_improvisation_agent.md  rag_agent.md  story_validation_agent.md  validator_improvisor_agent.md
agentic_implementation plan/architecture/: master_architecture_flows.md  understanding_confirmation.md  workflow_2_generation.md
agentic_implementation plan/schemas/: enhanced_stats_schema.md
agentic_migration/agents/: keyword_intelligence_agent.md  metadata_generation_agent.md  rag_agent.md  validator_improvisor_agent.md
agentic_migration/architecture/: migration_plan.md  overview.md  workflow_1_ingestion.md
agentic_migration/schemas/: enhanced_stats_template.json
chandamama_agentic_v2/: PROJECT_REPORT.md  README.md  agentic_app.py  requirements.txt
chandamama_agentic_v2/agentic_engine/: config.py  llm_client.py
data/: README.md
data/stats/: global_stats.json  normalized_stats.json  poem_stats.json
src/: app.py  config.py
src/agents/: base.py  (+6 more)
telugu-agents/: .env.example  setup.py  test_keyword_agent.py
tests/: test_ingestion_agent.py  test_validation_metadata.py
(+794 files in other folders)
